--- a/src/common/Search.css
+++ b/src/common/Search.css
@@ -1,20 +1,14 @@
-body{
-  background-color: #f2f2f2;
-}
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #f2f2f2;
-  padding: 0.5rem; /* decrease the padding */
-  margin: 0 auto; /* center the form */
-  max-width: 500px; /* limit the width of the form */
+  padding: 1rem;
 }
 
 label {
   font-size: 1.2rem;
   color: #333;
-  font-weight: bold;
 }
 
 input {
@@ -37,11 +31,12 @@ input:focus {
 p {
   margin: 0;
   color: #ff4136;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 button {
-  display: inline-block;
+  width: 100%;
+  height: 2.5rem;
   border: none;
   border-radius: 0.5rem;
   margin-top: 1rem;
